RESOLVED FIXED131649
REGRESSION (WebKit2): Programmatic scrolls in overflow-scrolling:touch don't work
https://bugs.webkit.org/show_bug.cgi?id=131649
Summary REGRESSION (WebKit2): Programmatic scrolls in overflow-scrolling:touch don't ...
Simon Fraser (smfr)
Reported 2014-04-14 17:24:11 PDT
REGRESSION (WebKit2): Programmatic scrolls in overflow-scrolling:touch don't work
Attachments
Patch (3.48 KB, patch)
2014-04-14 17:25 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2014-04-14 17:25:23 PDT
Simon Fraser (smfr)
Comment 2 2014-04-14 17:48:40 PDT
Note You need to log in before you can comment on or make changes to this bug.