REGRESSION (WebKit2): Programmatic scrolls in overflow-scrolling:touch don't work https://bugs.webkit.org/show_bug.cgi?id=131649

Reviewed by Tim Horton.

Update the UIScrollView's contentOffset when we're told that the scroll position
changed.

Also refactor slightly to have a single exception-protected block.

* UIProcess/Scrolling/ios/ScrollingTreeOverflowScrollingNodeIOS.mm:
(WebKit::ScrollingTreeOverflowScrollingNodeIOS::updateAfterChildren):

Canonical link: https://commits.webkit.org/149727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167286 268f45cc-cd09-0410-ab3c-d52691b4dbfc